# projectFSML

./: .gitignore  BodyView.qml  CMakeLists.txt  Clickablemusclesnorm.qml  InfoPanel.qml  Main.qml  Main.qml.autosave  MuscleZone.qml  README.md  clickablemusclesnorm.qml  main.cpp  resources.qrc
data/: data.json
src/app/: AppController.cpp  AppController.h  AppLogger.cpp  AppLogger.h  MuscleSearchService.h  MuscleSerchService.cpp
src/data/: DataStore.cpp  DataStore.h  Exercise.h  ExerciseRepository.cpp  ExerciseRepository.h  muscleinfo.h  muscleregion.cpp  muscleregion.h  muscleregionmodel.cpp  muscleregionmodel.h  musclestats.cpp  musclestats.h
src/workout/: WorkoutPlan.h  WorkoutPlanner.cpp  WorkoutPlanner.h  WorkoutStep.h
